--- a/kodilla-basic-tests/build.gradle
+++ b/kodilla-basic-tests/build.gradle
@@ -5,13 +5,17 @@ plugins {
 group 'com.kodilla'
 version '1.0-SNAPSHOT'
 
+test {
+    useJUnitPlatform()
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
 
 test {
