--- a/kodilla-spring-basic/build.gradle
+++ b/kodilla-spring-basic/build.gradle
@@ -24,8 +24,8 @@ repositories {
 }
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation('org.springframework.boot:spring-boot-starter:2.6.6')
+    testImplementation('org.springframework.boot:spring-boot-starter-test:2.6.6')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
