--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,7 @@ include 'kodilla-spring-basic'
 include 'kodilla-rest-api'
 include 'kodilla-soap'
 include 'kodilla-selenium'
+include 'kodilla-google-selenium'
+include 'kodilla-google-selenium'
+include 'kodilla-cucumber'
 
