--- a/kodilla-google-selenium/build.gradle
+++ b/kodilla-google-selenium/build.gradle
@@ -10,10 +10,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'junit:junit:4.13.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.0.0'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 test {
